--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
 </div>
 
-        <div class="half-width"><img src="images/img3.jpeg" alt="image"></div>
+        <div class="half-width"><img src="img3.jpeg" alt="image"></div>
         </section>
 <section>
 
