--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
     <section class=" flexible-container">
 
-        <div class="half-width"> <img src="images/img5.jpeg" alt="image"> </div>
+        <div class="half-width"> <img src="img5.jpeg" alt="image"> </div>
     
         <div class="half-width"> 
                 <h2>About me</h2>
